err/tachyon.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Tachyon-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/tachyon'...
Compiling './lib/python3.5/site-packages/tachyon/SPN2.py'...
***   File "./lib/python3.5/site-packages/tachyon/SPN2.py", line 77
    print i+1, "/", runs
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tachyon/data.py'...
***   File "./lib/python3.5/site-packages/tachyon/data.py", line 13
    print fname
              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/tachyon/e_load.py'...
***   File "./lib/python3.5/site-packages/tachyon/e_load.py", line 136
    print "generated a network of size", len(id_node_dict), "with", len(node_layers) ,"layers."
                                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/tachyon/load_file.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (load_file.py, line 21)
Compiling './lib/python3.5/site-packages/tachyon/model.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (model.py, line 80)
Compiling './lib/python3.5/site-packages/tachyon/nodes.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (nodes.py, line 12)
Listing './share'...
Listing './share/python-wheels'...
